# netkit-jh-build

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  README.mdown  VARIABLES.md  docker-start.sh  install-netkit-jh.sh
.github/ISSUE_TEMPLATE/: bug_report.md
core/: Makefile  README.mdown  check_configuration.sh  netkit-version  netkit.conf  netkit.conf.default
core/bash-completion/: helpers
core/bash-completion/completions/: lclean  lcrash  lhalt  linfo  lstart  ltest  vclean  vcommand  vconf  vconnect  vcrash  vdump  vhalt  vlist  vpackage  vstart
core/man/man1/: lclean.1  (+21 more)
core/setup_scripts/: bspwm_compat.sh  change_terminal.sh  check_configuration.sh  handle_config.sh
core/src/: Makefile
core/tools/: tmux.conf  tmux.conf.default  tmuxhelp.md
fs/: Makefile  README.md  debconf-package-selections  disabled-services  disabled-system-services  errors.txt  install-netkit-fs.sh  output.txt  packages-list  packages-list.old  packages-list.testing  rootstrap.conf
fs/modules/: netkit
kernel/: Makefile  config.amd64  config.i386  netkit-kernel-version  test.txt  uml-kernel-config
kernel/patches/: 02_x-terminal-emulator.patch  03_uml_switch.patch  05_fix_static_build.patch  06-fix-linkage-on-386-arch.patch  07-remove-rpath.patch  08-fix-pcap-linkage.patch  90-netkit_support.patch  series
patches/: bspwm.patch
scripts/: szhelper.rb
tests/: run_tests.sh
tests/configs/: 01-abr  02-tapout  03-entropy  04-tcpdump  10-wireguard  30-xterm  31-alacritty  32-kitty  33-konsole  34-gnome  35-wsl  abr
(+136 files in other folders)
