NETKIT_BUILD_RELEASE=0.1.3
NETKIT_KERNEL_RELEASE=K4.19
NETKIT_FS_RELEASE=F10.0

SUBARCH=i386

KERNEL_ARCHIVE_FILE=netkit-ng-kernel-${SUBARCH}-${NETKIT_KERNEL_RELEASE}-${NETKIT_BUILD_RELEASE}.tar.bz2
FS_ARCHIVE_FILE=netkit-ng-filesystem-${SUBARCH}-${NETKIT_FS_RELEASE}-${NETKIT_BUILD_RELEASE}.tar.bz2
